# coll_lib_trial

./: CMakeLists.txt  README.md  package.xml
src/: try_pkg_coll_lib.cpp  try_pkg_coll_lib_inf.cpp  try_pkg_coll_lib_inf_only.cpp
